Pending changes in the mainline
===============================


Version 2.6 (2024-08-31)
========================

* New button "Stretch to whole range" in the "Change windowing" menu

Maintenance
-----------

* Prevent dragging series before they are ready
* Open the first loaded series only if it is part of a selected study
* Fix default windowing for images without preset windowing
* Upgraded Emscripten version to 3.1.49
* Upgraded jquery to 3.7.1
* Upgraded axios to 1.7.5


Version 2.5 (2022-12-05)
========================

* Click-drag is available on the vertical slider
* Added key bindings:
  - Left/right arrows to change the active frame
  - Up/down arrows to change the active series
  - Page up/down to change the active study
  - Space bar to play/pause videos
* New URL argument "menu" to change the layout of the list of studies/series
* The first series to be loaded is now automatically opened
* Annotations are grouped into one submenu for narrow screens
* Support generation of ZIP archives in the presence of authorization tokens
* Fix measurement of arcs
* Width of the vertical slider has doubled to ease user interactions
* Patient sex is displayed in the top-left information panel


Version 2.4 (2022-11-02)
========================

* New types of annotations:
  - Text annotation
  - Pixel probe
  - Rectangle probe
  - Ellipse probe
* Added left/right rotation buttons
* Added magnifying glass
* Added vertical slider showing position of the current frame inside the series
* Display of orientation markers
* The text field with the instance number is editable to go to a specific instance
* Linear interpolation of images can be turned off in the user preferences
* New configuration options:
  - "ShowInfoPanelAtStartup" to control the info panel at startup
  - "ShowUserPreferencesButton" to show the button for setting preferences
  - "ShowNotForDiagnosticUsageDisclaimer" to show disclaimer about diagnostic usage