@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Remember the previous layout when re-opening the viewer.
+
 
 Version 2.6 (2024-08-31)
 ========================
